# spatial_world_model

./: README
spatial_world_model/: CMakeLists.txt  package.xml
world_listeners/: CMakeLists.txt  package.xml  setup.py
world_listeners/launch/: spatial_world_model.launch
world_listeners/scripts/: map_listener  robot_pose_listener
world_msgs/: CMakeLists.txt  package.xml
world_msgs/msg/: Descriptor.msg  PolygonWithPose.msg  Source.msg  WorldObjectDescription.msg  WorldObjectInstance.msg
worldlib/: CMakeLists.txt  package.xml  setup.py
worldlib/action/: CreateWorldObjectDescription.action  CreateWorldObjectInstance.action  GetWorldObjectDescription.action  RemoveWorldObjectInstance.action  UpdateWorldObjectInstance.action  WorldObjectDescriptionTagSearch.action  WorldObjectInstanceTagSearch.action
worldlib/scripts/: setup_world_model  spatial_world_model
worldlib/src/worldlib/: descriptor_connection.py  world_object_description_connection.py  world_object_instance_connection.py
