<?xml version="1.0"?>
<package>
  <name>spatial_world_model</name>
  <version>0.0.1</version>
  <description>The spatial_world_model meta-package.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/spatial_world_model</url>
  <url type="bugtracker">https://github.com/RobotWebTools/spatial_world_model/issues</url>
  <url type="repository">https://github.com/RobotWebTools/spatial_world_model</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>worldlib</run_depend>
  <run_depend>world_listeners</run_depend>
  <run_depend>world_msgs</run_depend>

  <export>
    <metapackage />
  </export>
</package>
