<?xml version="1.0"?>
<package>
  <name>worldlib</name>
  <version>0.0.1</version>
  <description>Common libraries to communicate with the spatial world model database.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/worldlib</url>
  <url type="bugtracker">https://github.com/RobotWebTools/spatial_world_model/issues</url>
  <url type="repository">https://github.com/RobotWebTools/spatial_world_model</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>world_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-psycopg2</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>world_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-psycopg2</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
